--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,10 @@
             <artifactId>HikariCP</artifactId>
             <version>3.4.2</version>
         </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+        </dependency>
 
     </dependencies>
 
