--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## 数据库配置
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://huafengprivate.top:3306/QuestionnaireOnline?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = Zxd1997.
@@ -11,8 +11,6 @@ spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=180000
 ## 连接池最大连接数，默认是10
 spring.datasource.hikari.maximum-pool-size=10
-## 此属性控制从池返回的连接的默认自动提交行为,默认值：true
-spring.datasource.hikari.auto-commit=true
 ## 连接池母子
 spring.datasource.hikari.pool-name=MyHikariCP
 ## 此属性控制池中连接的最长生命周期，值0表示无限生命周期，默认1800000即30分钟
@@ -28,8 +26,11 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 #热部署文件，页面不产生缓存，及时更新
 spring.thymeleaf.cache=false
-spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
+
+#mybatis配置
+mybatis.type-aliases-package=top.huafeng.springboot.questionnaireoline.mapper
+mybatis.mapper-locations=classpath:mapper/*.xml
 
 #邮箱服务
 #邮箱服务器地址
